     MyApp::View::HTML).

  Bug fixes:
   - --daemon and -d options to Catalyst::Script::FastCGI are fixed.
   - Fix the debug dump for applications which use Catalyst::Plugin::Session
     (RT#52898)
   - Fix regression in the case where mod_rewrite is being used to rewrite
     requests into a path below your application base introduced with the
     %2F related fixes in 5.80014_02.

  Cleanups:
    - Stop suppressing warnings from Class::C3::Adopt::NEXT now that most plugins
      have been updated to not use NEXT. If you get warnings then please upgrade
      your components or log a bug with the component author if an upgrade is
      not available. The Class::C3::Adopt::NEXT documentation contains information
      about how to suppress the warnings in your application if you need to.

5.80016 2009-12-11 23:23:33

  Bug fixes:

   - Fix slurping a file to work correctly with binary on Win32 in the
     encoding test controller.

  Bug fixes in the new scripts (for applications which have been upgraded):

   - Allow --restartdirectory as an option for the Server script, for
     backwards compatibility. (Dave Rolsky)
   - The --host option for the server script defaulted to localhost, rather
     than listening on all interfaces, which was the previous default. (Dave
     Rolsky)
   - Restore -p option for pid file in the FastCGI server script.
   - Fix the script environment variables MYAPP_PORT and MYAPP_RELOAD RT#52604
   - Fix aliasing applications under non-root paths with mod_rewrite in
     some apache versions where %ENV{SCRIPT_NAME} is set to the real name of
     the script, by using $ENV{REDIRECT_URL} which contains the non-rewritten
     URI.
   - Fix usage display when myapp_create.pl is run with no arguments. RT#52630

  New features:

   - The __MOP__ hash element is suppressed from being dumped fully
     (and instead stringified) when dumping the error screen to be
     less packed with information of no use.

  Documentation:
